# Voxtype

./: CLAUDE.md  README.md  build.sh  pyproject.toml  run.sh
.claude/: settings.local.json
app/src/: audio_feedback.py  config.py  main.py  tts_announcer.py
docs/: evolution.md  gemini-3.1-flash-lite-preview.md
planning/: shortcuts-and-auto-enter.md
planning/bugs/resolved/: BUG-0001.md  BUG-0002.md
tools/tts/: README.md  __init__.py  generate_prompts.py  modal_tts.py  synthesize.py  voices.py
